# redline

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SUBMISSION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
services/rigor/: README.md  pyproject.toml
services/rigor/bench/: README.md  __init__.py  artifact.py  baseline.py  critic.py  generate.py  labeler.py  llm.py  redline_arm.py  relabel.py  requirements-lock.txt  run.py  score.py  selftest.py  spec.py
services/rigor/bench/cases/: clean_control_clean_00.h5ad  clean_control_clean_01.h5ad  clean_control_clean_02.h5ad  clean_control_clean_03.h5ad  continuum_pos_00.h5ad  continuum_pos_01.h5ad  continuum_pos_02.h5ad  continuum_pos_03.h5ad  continuum_pos_04.h5ad  continuum_pos_05.h5ad  labels.json  manifest.json  p1_clean_00.h5ad  p1_clean_01.h5ad  p1_clean_02.h5ad  p1_clean_03.h5ad  p1_clean_04.h5ad  p1_clean_05.h5ad  p1_pos_00.h5ad  p1_pos_01.h5ad  p1_pos_02.h5ad  p1_pos_03.h5ad  p1_pos_04.h5ad  p1_pos_05.h5ad  p4_clean_00.h5ad  (+23 more)
services/rigor/data/: README.md  base_datasets.py  build_case_fixtures.py  build_ci_reference.py  build_foils.py  build_naive_foil.py  build_real_marson.py  generate_foil.py  oracle.py  subset_marson.py
services/rigor/redline/: __init__.py  audit.py  contracts.py  foundation.py  gating.py  inspect.py  job_runner.py  mcp_server.py  remote_adapter.py
services/rigor/tests/: conftest.py  test_ci_intervals.py  test_contracts.py  test_correction.py  test_foilgen.py  test_inspect.py  test_pillars.py  test_real_stack.py  test_registry.py
(+183 files in other folders)
